base/networkpolicies/default-allow-nodeport-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-allow-nodeport-ingress"
spec:
  endpointSelector: {}
  ingress:
  - fromEntities:
    - host
