base/networkpolicies/default-allow-same-namespace-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-allow-same-namespace-ingress"
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - {}
