base/networkpolicies/default-deny-all-ingress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "default-deny-all-ingress"
spec:
  endpointSelector:
    matchLabels:
      - {} 
  ingress:
  - {}
